--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,33 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
-    </build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <!--<phase>compile</phase>-->
+                    </execution>
 
+                </executions>
+                <configuration>
+                    <mainClass>org.hsqldb.Server</mainClass>
+                    <arguments>
+                        <argument>-database.0</argument>
+                        <argument>file:target/data/tutorial</argument>
+                    </arguments>
+
+                </configuration>
+<!--mvn exec:java-Dexec.mainClass="org.hsqldb.Server" -Dexec.args="-database.0 file:target/data/tutorial"-->
+            </plugin>
+
+        </plugins>
+    </build>
 
 
     <pluginRepositories>
@@ -22,9 +47,20 @@
             <layout>default</layout>
             <url>http://repository.jboss.org/maven2</url>
         </pluginRepository>
+        <pluginRepository>
+            <id>codehaus</id>
+            <name>Сodehaus</name>
+            <layout>default</layout>
+            <url>http://repository.codehaus.org</url>
+        </pluginRepository>
     </pluginRepositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.2.1</version>
+        </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -54,12 +90,7 @@
             <version>2.2.8</version>
             <!--<scope></scope>-->
         </dependency>
-
-
-
-
     </dependencies>
 
 
-    
 </project>
