--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,12 @@
     <groupId>mavenHibernateTest</groupId>
     <artifactId>mavenHibernateTest</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
 
     <build>
         <finalName>${project.artifactId}</finalName>
+
         <!--<plugins>-->
             <!--<plugin>-->
                 <!--<groupId>org.codehaus.mojo</groupId>-->
